Fixed bug #71234 (INI files are loaded even invoked as phpdbg -n --version)