sapi/phpdbg/phpdbg.c
@@ -1362,6 +1362,7 @@ int main(int argc, char **argv) /* {{{ */
 	int exit_status;
 	char *read_from_stdin = NULL;
 	zend_string *backup_phpdbg_compile = NULL;
+	zend_bool show_help = 0, show_version = 0;
 
 #ifndef _WIN32
 	struct sigaction sigio_struct;
@@ -1556,34 +1557,11 @@ phpdbg_main:
 			} break;
 
 			case 'h': {
-				sapi_startup(phpdbg);
-				phpdbg->startup(phpdbg);
-				PHPDBG_G(flags) = 0;
-				/* It ain't gonna proceed to real execution anyway,
-					but the correct descriptor is needed already. */
-				PHPDBG_G(io)[PHPDBG_STDOUT].ptr = stdout;
-				PHPDBG_G(io)[PHPDBG_STDOUT].fd = fileno(stdout);
-				phpdbg_set_prompt(PHPDBG_DEFAULT_PROMPT);
-				phpdbg_do_help(NULL);
-				sapi_deactivate();
-				sapi_shutdown();
-				return 0;
+				show_help = 1;
 			} break;
 
 			case 'V': {
-				sapi_startup(phpdbg);
-				phpdbg->startup(phpdbg);
-				printf(
-					"phpdbg %s (built: %s %s)\nPHP %s, Copyright (c) 1997-2016 The PHP Group\n%s",
-					PHPDBG_VERSION,
-					__DATE__,
-					__TIME__,
-					PHP_VERSION,
-					get_zend_version()
-				);
-				sapi_deactivate();
-				sapi_shutdown();
-				return 0;
+				show_version = 1;
 			} break;
 		}
 
@@ -1661,6 +1639,51 @@ phpdbg_main:
 
 		/* set flags from command line */
 		PHPDBG_G(flags) = flags;
+
+		/* set default colors */
+		phpdbg_set_color_ex(PHPDBG_COLOR_PROMPT,  PHPDBG_STRL("white-bold"));
+		phpdbg_set_color_ex(PHPDBG_COLOR_ERROR,   PHPDBG_STRL("red-bold"));
+		phpdbg_set_color_ex(PHPDBG_COLOR_NOTICE,  PHPDBG_STRL("green"));
+
+		/* set default prompt */
+		phpdbg_set_prompt(PHPDBG_DEFAULT_PROMPT);
+
+		if (show_version || show_help) {
+			/* It ain't gonna proceed to real execution anyway,
+				but the correct descriptor is needed already. */
+			PHPDBG_G(io)[PHPDBG_STDOUT].ptr = stdout;
+			PHPDBG_G(io)[PHPDBG_STDOUT].fd = fileno(stdout);
+			if (show_help) {
+				phpdbg_do_help(NULL);
+			} else if (show_version) {
+				phpdbg_out(
+					"phpdbg %s (built: %s %s)\nPHP %s, Copyright (c) 1997-2016 The PHP Group\n%s",
+					PHPDBG_VERSION,
+					__DATE__,
+					__TIME__,
+					PHP_VERSION,
+					get_zend_version()
+				);
+			}
+			sapi_deactivate();
+			sapi_shutdown();
+			if (ini_entries) {
+				free(ini_entries);
+			}
+			if (ini_override) {
+				free(ini_override);
+			}
+			if (exec) {
+				free(exec);
+			}
+			if (oplog_file) {
+				free(oplog_file);
+			}
+			if (init_file) {
+				free(init_file);
+			}
+			goto free_and_return;
+		}
 
 		if (settings > (zend_phpdbg_globals *) 0x2) {
 #ifdef ZTS
@@ -1820,14 +1843,6 @@ phpdbg_main:
 			free(oplog_file);
 			oplog_file = NULL;
 		}
-
-		/* set default colors */
-		phpdbg_set_color_ex(PHPDBG_COLOR_PROMPT,  PHPDBG_STRL("white-bold"));
-		phpdbg_set_color_ex(PHPDBG_COLOR_ERROR,   PHPDBG_STRL("red-bold"));
-		phpdbg_set_color_ex(PHPDBG_COLOR_NOTICE,  PHPDBG_STRL("green"));
-
-		/* set default prompt */
-		phpdbg_set_prompt(PHPDBG_DEFAULT_PROMPT);
 
 		{
 			php_stream_wrapper *wrapper = zend_hash_str_find_ptr(php_stream_get_url_stream_wrappers_hash(), ZEND_STRL("php"));
@@ -2131,6 +2146,7 @@ phpdbg_out:
 		sapi_shutdown();
 	}
 
+free_and_return:
 	if (read_from_stdin) {
 		free(read_from_stdin);
 		read_from_stdin = NULL;
